<resources>
    <string name="app_name">B-Wallet</string>
    <string name="this_action_can_contain_ad">Your best choice for e-wallet</string>
    <string name="facebook_app_id">1234</string>
    <string name="language_english" translatable="false">English</string>
    <string name="language_spain" translatable="false">Espalier</string>
    <string name="language_portugal" translatable="false">Portuguese</string>
    <string name="language_hindi" translatable="false">भारतीय भाषा</string>
    <string name="language_germany" translatable="false">Deutsch</string>
    <string name="language_brazil" translatable="false">Lingua Brasilia</string>
    <string name="language_japan" translatable="false">日本</string>
    <string name="language_korean" translatable="false">한국어</string>
    <string name="language_france" translatable="false">Francais</string>
    <string name="language_china" translatable="false">中国人</string>
    <string name="languages">Languages</string>
    <string name="ac">Ac</string>
    <string name="c">C</string>
    <string name="chia">/</string>
    <string name="nhan">*</string>
    <string name="cong">+</string>
    <string name="tru">-</string>
    <string name="bang">=</string>
    <string name="khong">0</string>
    <string name="mot">1</string>
    <string name="hai">2</string>
    <string name="ba">3</string>
    <string name="bon">4</string>
    <string name="nam">5</string>
    <string name="sau">6</string>
    <string name="bay">7</string>
    <string name="tam">8</string>
    <string name="chin">9</string>
    <string name="thapphan">.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_b_wallet">B-Wallet</string>
    <string name="txt_sign_in">Sign In</string>
    <string name="txt_email_phone_number">Email/Phone Number</string>
    <string name="txt_password">Password</string>
    <string name="txt_forgot_password">Forgot Password</string>
    <string name="txt_don_t_have_account_yet">Don’t have account yet?</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_enter_the_otp_code">Enter the OTP code</string>
    <string name="txt_we_ve_sent_you_an_otp_code_to">We’ve sent you an OTP code to</string>
    <string name="phone_number">0888888888</string>
    <string name="txt_the_otp_code_is_invalid">The OTP code is invalid.</string>
    <string name="txt_name">Name</string>
    <string name="txt_phone_number">Phone Number</string>
    <string name="txt_email_address">Email Address</string>
    <string name="txt_birthday">Birthday</string>
    <string name="txt_already_have_an_account">Already have an account?</string>
    <string name="txt_set_up_your_pin">Set Up Your PIN</string>
    <string name="txt_security_code_is_used_to_verify_your_every_transaction_to_be_more_secure">Security code is used to verify your every transaction to be more secure</string>
    <string name="txt_1">1</string>
    <string name="txt_2">2</string>
    <string name="txt_3">3</string>
    <string name="txt_0">0</string>
    <string name="txt_9">9</string>
    <string name="txt_8">8</string>
    <string name="txt_7">7</string>
    <string name="txt_4">4</string>
    <string name="txt_5">5</string>
    <string name="txt_6">6</string>
    <string name="txt_the_pin_you_entered_is_wrong">The pin you entered is wrong</string>
    <string name="txt_set_up_failed_please_try_again_later_or_check_your_connection">Set Up failed, please try again later or check your connection</string>
    <string name="txt_yay_your_pin_code_has_been_created_continue_to_b_wallet">Yay! Your PIN code has been created. Continue to B-Wallet!</string>
    <string name="txt_continue">Continue</string>
    <string name="txt_oke">Oke</string>
    <string name="txt_enter_your_username_and_password">Enter your UserName and PassWord!</string>
    <string name="txt_don_t_leave_your_account_or_password_blank">Don\'t leave your account or password blank</string>
    <string name="txt_don_t_blank">Don\'t blank</string>
</resources>