<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg_background_main"
    android:gravity="center_horizontal"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:src="@drawable/ic_logo"
        android:background="@drawable/bg_logo_circle_white"
        android:padding="@dimen/_20sdp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvTittle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvTittle"
        android:layout_width="match_parent"
        android:text="@string/txt_b_wallet"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_30ssp"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        android:fontFamily="@font/gilroy_medium"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/lnInput"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/lnInput"
        android:layout_width="match_parent"
        android:background="@drawable/bg_input_login"
        android:padding="@dimen/_20sdp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">
        
        <TextView
            android:layout_width="wrap_content"
            android:textSize="@dimen/_20ssp"
            android:fontFamily="@font/gilroy_bold"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text = "@string/txt_sign_in"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding = "@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/bg_edt_input_login"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/colorGrey"
                android:text="@string/txt_phone_number"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:textColor="@color/colorBlack"
                android:inputType="number"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/gilroy_regular"
                android:backgroundTint="@color/colorAlpha"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TableRow
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding = "@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/bg_edt_input_login"
            android:layout_height="wrap_content">

            <LinearLayout android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:textColor="@color/colorGrey"
                    android:text="@string/txt_password"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/edtPassWord"
                    android:layout_width="match_parent"
                    android:textColor="@color/colorBlack"
                    android:inputType="textPassword"
                    android:textSize="@dimen/_10ssp"
                    android:fontFamily="@font/gilroy_regular"
                    android:backgroundTint="@color/colorAlpha"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <ImageView android:layout_width="wrap_content"
                android:src="@drawable/icon_eye_hide"
                android:layout_gravity="center"
                android:id="@+id/ivEye"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TextView
            android:id="@+id/tvSignIn"
            android:layout_width="match_parent"
            android:text="@string/txt_sign_in"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:textSize="@dimen/_16ssp"
            android:paddingVertical="@dimen/_14sdp"
            android:background="@drawable/bg_tv_sign_in"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="match_parent"
            android:textColor="@color/colorOrange"
            android:gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/txt_forgot_password"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/gilroy_semi_bold"
            android:layout_height="wrap_content"/>

        <TableRow android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_height="wrap_content">

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/colorGrey"
                android:text="@string/txt_don_t_have_account_yet"/>

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:layout_marginStart="@dimen/_4sdp"
                android:fontFamily="@font/gilroy_semi_bold"
                android:textColor="@color/colorOrange"
                android:text="@string/txt_sign_up"/>
        </TableRow>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>