<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="@dimen/_20sdp"
    android:background="@color/colorBlue"
    android:layout_height="match_parent">
    
    <TextView
        android:text="@string/txt_set_up_your_pin"
        android:id="@+id/tvTittle"
        android:textSize="@dimen/_16ssp"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/gilroy_medium"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:text="@string/txt_security_code_is_used_to_verify_your_every_transaction_to_be_more_secure"
        android:id="@+id/tvTittle2"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:fontFamily="@font/gilroy_regular"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvTittle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <TableRow
        android:id="@+id/tbDot"
        app:layout_constraintTop_toBottomOf="@id/tvTittle2"
        app:layout_constraintBottom_toTopOf="@id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/ivDot1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dot_purple"/>

        <ImageView
            android:id="@+id/ivDot2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dot_purple"/>

        <ImageView
            android:id="@+id/ivDot3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dot_purple"/>

        <ImageView
            android:id="@+id/ivDot4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dot_purple"/>

        <ImageView
            android:id="@+id/ivDot5"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dot_purple"/>

        <ImageView
            android:id="@+id/ivDot6"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dot_purple"/>

    </TableRow>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintBottom_toTopOf="@id/line2"
        android:layout_marginBottom="@dimen/_20sdp"
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" >

        <TextView
            android:id="@+id/tv1"
            android:background="@drawable/bg_edt_input_otp"
            android:text="@string/txt_1"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_20ssp"
            android:tag="1"
            android:layout_width="0dp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_marginHorizontal="@dimen/_16sdp"
            app:layout_constraintEnd_toStartOf="@id/tv2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="0dp"/>

        <TextView
            android:id="@+id/tv2"
            android:background="@drawable/bg_edt_input_otp"
            android:text="@string/txt_2"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_20ssp"
            android:tag="2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/tv3"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/tv1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv3"
            android:background="@drawable/bg_edt_input_otp"
            android:text="@string/txt_3"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_20ssp"
            android:tag="3"
            android:layout_width="0dp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_marginHorizontal="@dimen/_16sdp"
            app:layout_constraintStart_toEndOf="@id/tv2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="0dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/line2"
        app:layout_constraintBottom_toTopOf="@id/line3"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" >

        <TextView
            android:id="@+id/tv4"
            android:background="@drawable/bg_edt_input_otp"
            android:text="@string/txt_4"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_20ssp"
            android:tag="4"
            android:layout_width="0dp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_marginHorizontal="@dimen/_16sdp"
            app:layout_constraintEnd_toStartOf="@id/tv5"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="0dp"/>

        <TextView
            android:id="@+id/tv5"
            android:background="@drawable/bg_edt_input_otp"
            android:text="@string/txt_5"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_20ssp"
            android:tag="5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/tv6"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/tv4"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv6"
            android:background="@drawable/bg_edt_input_otp"
            android:text="@string/txt_6"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_20ssp"
            android:tag="6"
            android:layout_width="0dp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_marginHorizontal="@dimen/_16sdp"
            app:layout_constraintStart_toEndOf="@id/tv5"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="0dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintBottom_toTopOf="@id/line4"
        android:layout_marginBottom="@dimen/_20sdp"
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" >

        <TextView
            android:id="@+id/tv7"
            android:background="@drawable/bg_edt_input_otp"
            android:text="@string/txt_7"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_20ssp"
            android:tag="7"
            android:layout_width="0dp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_marginHorizontal="@dimen/_16sdp"
            app:layout_constraintEnd_toStartOf="@id/tv8"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="0dp"/>

        <TextView
            android:id="@+id/tv8"
            android:background="@drawable/bg_edt_input_otp"
            android:text="@string/txt_8"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_20ssp"
            android:tag="8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/tv9"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/tv7"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv9"
            android:background="@drawable/bg_edt_input_otp"
            android:text="@string/txt_9"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_20ssp"
            android:tag="9"
            android:layout_width="0dp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_marginHorizontal="@dimen/_16sdp"
            app:layout_constraintStart_toEndOf="@id/tv8"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="0dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/_40sdp"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" >

        <TextView
            android:id="@+id/tvBluer"
            android:background="@drawable/bg_edt_input_otp"
            android:text="@string/txt_1"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_20ssp"
            android:tag="1"
            android:visibility="invisible"
            android:layout_width="0dp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_marginHorizontal="@dimen/_16sdp"
            app:layout_constraintEnd_toStartOf="@id/tv0"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="0dp"/>

        <TextView
            android:id="@+id/tv0"
            android:background="@drawable/bg_edt_input_otp"
            android:text="@string/txt_0"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_20ssp"
            android:tag="0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/tvClear"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/tvBluer"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/tvClear"
            android:background="@drawable/bg_edt_input_otp"
            android:gravity="center"
            android:src="@drawable/ic_clear"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_20ssp"
            android:tag="3"
            android:layout_width="0dp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_marginHorizontal="@dimen/_16sdp"
            app:layout_constraintStart_toEndOf="@id/tv0"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="0dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>